# triage-trend

./: .gitignore  Dockerfile  README.md  format_weather.py  model_comparison.py  moon_phase.py  package-lock.json  pyproject.toml  run.py  tempdata.csv  train.py
data/: cleaned_weather_features_2019.csv  cleaned_weather_features_2020.csv  cleaned_weather_features_2021.csv  cleaned_weather_features_2022.csv  cleaned_weather_features_2023.csv  moon_phase.csv  public_holidays.csv  vacations.csv  weather_data_2019.csv  weather_data_2020.csv  weather_data_2021.csv  weather_data_2022.csv  weather_data_2023.csv  weather_features.csv
model/: gb_model.pkl
scripts/: format_weather.py
triage-trend-ui/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
triage-trend-ui/src/: app.html
triage-trend-ui/src/lib/: Employee.ts  Prediction.ts
triage-trend-ui/src/routes/: +layout.svelte  +page.svelte
triage_trend/: analysis.py  load_data.py  main.py  train.py
triage_trend/data_service/: feature_map.py  get_data.py  moon_phase.py  public_holidays.py  vacations.py  weather_forecast.py
