[tool.poetry]
name = "triage-trend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
torch = "^2.4.0"
scikit-learn = "^1.5.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
ephem = "^4.1.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
imblearn = "^0.0"
tensorflow = "^2.17.0"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
